# 1.-HUMANOID_GUI_MPU6050

1. HUMANOID_GUI_MPU6050/: README.md
1. HUMANOID_GUI_MPU6050/1. Gerak_Humanoid/DMP_MPU6050/: DMP_MPU6050.ino
1. HUMANOID_GUI_MPU6050/1. Gerak_Humanoid/Gerak_Humanoid/: Gerak_Humanoid.ino
1. HUMANOID_GUI_MPU6050/1. Gerak_Humanoid/readMPUonly/: readMPUonly.ino
1. HUMANOID_GUI_MPU6050/2. Humanoid_GUI/: CMakeLists.txt  Humanoid_GUI.pro  Main3D.cpp  dialog.cpp  dialog.h  dialog.ui
